# SmollNet

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  pyproject.toml
.cache/clangd/index/: tensor.cpp.67C76E8F97ED678C.idx
.github/workflows/: build.yml  build_and_sa.yml  static_analysis.yml
cmake/: SmollNetConfig.cmake.in  bindings.cmake  cuda.cmake  install.cmake
example/: CMakeLists.txt  main.cpp
pybind/: bindings.cpp  tensor_bindings.hpp
python/: bindings.cpp
python/smollnet/: init.py
src/: autograd.cpp  autograd.hpp  helpers.hpp  kernels.cu  kernels.cuh  layer_norm.cpp  layer_norm.hpp  module.hpp  neuralnet.cpp  neuralnet.hpp  sgd.cpp  sgd.hpp  smollnet.hpp  sum.cu  tensor.cpp  tensor.hpp  types.hpp  variance.cu  welford.cu  welford_internal.inl
test/benchmark/: CMakeLists.txt  benchmark_harness.hpp  variance_benchmark.cpp  welford_benchmark.cpp
utils/: tests.py
