[build-system]
requires = [
  "scikit-build-core>=0.11.5",
  "cmake>=3.27",
  "ninja",
  "conan>=2.0"
]
build-backend = "scikit_build_core"

[project]
name = "smollnet"
version = "0.0.1"
description = "SmollNet is a small deep learning library written in pure CUDA/C++"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Jakub Domagala", email = "domagala.jacob@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dependencies = [
    "pybind11>=2.11.0"
]

[project.urls]
Repository = "https://github.com/JacobDomagala/SmollNet"
Issues = "https://github.com/JacobDomagala/SmollNet/issues"

[tool.setuptools.packages.find]
where = ["python"]

